# presentations

./: .gitignore  LICENSE
2016_tdd_of_python_microservices/: README.md  europython_2016.txt
2016_tdd_of_python_microservices/grafy/: graph.gv  graph_bigger.xcf
2016_tdd_of_python_microservices/pyconpl/: text.html  text.md.bak
2017_cli_as_ide/: terminal_wystarczy-praca_z_projektami_pythonowymi_z_poziomu_konsoli.mm
2017_cli_as_ide/skrypty/: show_fonts.sh
2018_asyncio_in_action/: 1_sync_networking.py  3_coroutines_on_generators.py  README.md
2018_euro_python_proposal/: EuroPython2018.mm  abstract_short.txt  notki_na_konferencję.txt
2018_painless_data_objects/: notatki.mm
2018_writing_tests_with_docker_fast/: Pipfile  README.md
2019_understanding_git/: Makefile  presentation.html  presentation_structure.mm  pyproject.toml  slides.rst
2023-03_developer_workflow_with_local_tests_using_docker-compose/: Makefile  README.md  package-lock.json  package.json  presentation.html  pyproject.toml  removed_slides.md  slides.md  slides_en.md  slides_pl.md  style.css
2023-03_developer_workflow_with_local_tests_using_docker-compose/void_theme/css/: theme.css
general_development/few_words_about_comments/: mind_map.mm  przykłady.txt
python/2015/: python_i_ty.ipynb
python/asyncio_in_action/: 2_async_networking.py  5_aiohttp_async.py  when_tasks_are_running.py
python/cli-as-ide/: README.md  terminal_wystarczy-praca_z_projektami_pythonowymi_z_poziomu_konsoli.mm
python/euro_python_2018_proposal/: abstract_long_final.txt  biography.txt  title.txt
(+38 files in other folders)
